fix title wrapping

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -39,7 +39,7 @@ body {
   font-size: 18px;
   line-height: 1.4;
   padding: 3rem;
-  max-width: 480px;
+  max-width: 500px;
   margin: 0 auto;
 }
 
